
nobase_dist_pkgdata_DATA = \
  guile/geiser/completion.scm \
  guile/geiser/doc.scm \
  guile/geiser/emacs.scm \
  guile/geiser/evaluation.scm \
  guile/geiser/modules.scm \
  guile/geiser/utils.scm \
  guile/geiser/xref.scm \
  racket/geiser/autodoc.rkt \
  racket/geiser/completions.rkt \
  racket/geiser/enter.rkt \
  racket/geiser/eval.rkt \
  racket/geiser/images.rkt \
  racket/geiser/locations.rkt \
  racket/geiser/main.rkt \
  racket/geiser/modules.rkt \
  racket/geiser/server.rkt \
  racket/geiser/startup.rkt \
  racket/geiser/user.rkt \
  racket/geiser/utils.rkt
